[project]
name = "bike-scenarios"
version = "0.1.0"
description = "A minimalist Python CLI to plan and compare custom mountain bike builds"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
bike-scenarios = "bike_scenarios:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
